2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (process_input_stack): Emit warning
	in category "syntax", and otherwise ignore, horizontal space
	tokens (including `\h`, `\0`, `\|`, and `\^) after `\c` on an
	input line.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::next): Reject `\s` escape
	sequence after `\c` on an input line.  Throw warning in category
	"syntax" and don't interpret it at all.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::set_font): Move warning
	thrown (and recast it, and change its category from "font" to
	"syntax") when font selection attempted on the ignored part of
	an input line interrupted/continued with `\c` from here...
	* src/roff/troff/input.cpp (token::next): ...to here.

	* doc/groff.texi.in (Warnings):
	* man/groff_diff.7.man (Warnings): Simplify description of
	warning category "font" accordingly.

2025-12-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp
	(override_available_type_sizes_request): Fix code style nits.
	Arrange equality comparisons to avoid inadvertent lvalue
	assignment.  Parenthesize formally complex expressions.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::possibly_break_line): Fix
	code style nits.  Parenthesize formally complex expressions.
	Arrange equality comparisons to avoid inadvertent lvalue
	assignment.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp
	(non_interpreted_char_node::non_interpreted_char_node): Fix code
	style nit.  Migrate input character handling constructor to deal
	in the type `unsigned char` rather than `char`.  Use explicitly
	unsigned literal in comparison.

	Continues the long process of fixing Savannah #67735.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>
